# compiler-prototype-one

./: .gitignore  configure.ac
data/: antibiotics-for-resps.scl
doc/: command-log  convo-with-scott  language-design-goals
src/: Makefile.am  main.c
src/scanner/: Makefile.am  scanner.c  scanner.h  scl.l  scl.y  scl_parser.y  scl_scanner.l
